--- a/SmallProject/SmallProject.csproj
+++ b/SmallProject/SmallProject.csproj
@@ -145,6 +145,9 @@
     <Compile Include="tblJoin.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="tblProduct.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="tblShop.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
